manifests/color/eu/ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-preview
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    link.argocd.argoproj.io/external-link: https://color-eu.cs.sandbox.codefresh.io/color-preview/
spec:
  rules:
    - host: color-eu.cs.sandbox.codefresh.io
      http:
        paths:
          - path: /color-preview(/|$)(.*)
            backend:
              service:
                name: color-preview
                port:
                  number: 80
            pathType: ImplementationSpecific
